Working Leave History issue clear
Working Leave History issue clear

--- a/FaceTek/My Team/LeaveHistory/LeaveHistoryHeadercell.xib
+++ b/FaceTek/My Team/LeaveHistory/LeaveHistoryHeadercell.xib
@@ -30,7 +30,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rejected" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVC-WH-nRq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVC-WH-nRq">
                                 <rect key="frame" x="204" y="10" width="75" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="G7l-rm-Bre"/>
